Amazon Linux 2 GitLab CI Build
Update the repo for Amazon Linux 2 RPM builds using GitLab CI and an
[AL2 Dockerfile](https://hub.docker.com/repository/docker/p21jgitlin/ats-builder)
Cleaned up the repo, removing unnecessary patches and removing binary
source blobs; source should be downloaded _and verified_ by the CI
build process, not committed to git. Removed unnecessary patch files
and enabled systemd by default. Cleaned up README.

--- a/SOURCES/trafficserver.service
+++ b/SOURCES/trafficserver.service
@@ -1,12 +1,14 @@
 [Unit]
 Description=Apache Traffic Server is a fast, scalable and extensible caching proxy server.
 After=syslog.target network.target
+Requires=syslog.target network.target
 
 [Service]
 Type=simple
 EnvironmentFile=-/etc/sysconfig/trafficserver
-ExecStart=/usr/bin/traffic_manager $TC_DAEMON_ARGS
+ExecStart=/usr/bin/trafficserver start
 ExecReload=/usr/bin/traffic_ctl config reload
+ExecStop=/usr/bin/trafficserver stop
 
 [Install]
 WantedBy=multi-user.target
